--- a/Assignment3/Cube.html
+++ b/Assignment3/Cube.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <script type="text/javascript" src="MV.js"></script>
     <script type="text/javascript" src="initShaders.js"></script>
     <script type="text/javascript" src="Cube.js"></script>
     <script type="text/javascript" src="main.js"></script>
@@ -7,21 +8,23 @@
     <script id="Cube-vertex-shader" type="x-shader/x-vertex">
         in vec4 aPosition;
 
+        uniform mat4 MV;
+
         void main()
         {
-            gl_PointSize = 3.0;
-            gl_Position = aPosition;
+            gl_Position = MV * (aPosition - vec4(.5,.5,.5,0));
         }
     </script>
 
-    <script id="Cube-fragment-shader" type="x-shader/x-fragment">#version 300 es
-        precision highp float;
-
+    <script id="Cube-fragment-shader" type="x-shader/x-fragment">
         out vec4 fColor;
 
         void main()
         {
-            fColor = vec4(1.0, 1.0, 1.0, 1.0);
+            const vec4 red = vec4(1.0, 0.0, 0.0, 1.0);
+            const vec4 blue = vec4(0.0, 0.0, 1.0, 1.0);
+
+            fColor = gl_FrontFacing ? blue : red;
         }
     </script>
 </head>
