--- a/Assignment3/Cube.html
+++ b/Assignment3/Cube.html
@@ -10,10 +10,11 @@
 
         uniform mat4 MV;
         uniform mat4 P;
+        uniform mat4 V;
 
         void main()
         {
-            gl_Position = MV * (aPosition - vec4(.5,.5,.5,0));
+            gl_Position = P * V * MV * (aPosition - vec4(.5,.5,.5,0));
         }
     </script>
 
