--- a/FinalProject/Project.html
+++ b/FinalProject/Project.html
@@ -18,19 +18,24 @@
       document.body.appendChild( renderer.domElement );
 
       const geometry = new THREE.BoxGeometry();
-      const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+      const material = new THREE.MeshPhongMaterial( { color: 0x44aa88 } );
       const cube = new THREE.Mesh( geometry, material );
       scene.add( cube );
+
+      const color = 0xFFFFFF;
+      const intensity = 1;
+      const light = new THREE.DirectionalLight(color, intensity);
+      light.position.set(-1, 2, 4);
+      scene.add(light);
 
       camera.position.z = 5;
 
       function animate() {
-        requestAnimationFrame( animate );
-
         cube.rotation.x += 0.01;
         cube.rotation.y += 0.01;
 
         renderer.render( scene, camera );
+        requestAnimationFrame( animate );
       };
 
       animate();
