--- a/FinalProject/Project.html
+++ b/FinalProject/Project.html
@@ -10,39 +10,7 @@
   <body>
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
-    <script>
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-      const loader = new THREE.GLTFLoader();
-
-
-      const renderer = new THREE.WebGLRenderer();
-      renderer.setSize( window.innerWidth, window.innerHeight );
-      document.body.appendChild( renderer.domElement );
-
-
-      loader.load( 'Models/thompson_submachine_gun/scene.gltf', function ( gltf ) {
-          scene.add( gltf.scene );
-      }, undefined, function ( error ) {
-          console.error( error );
-      });
-
-
-      const color = 0xFFFFFF;
-      const intensity = 1;
-      const light = new THREE.DirectionalLight(color, intensity);
-      light.position.set(-1, 2, 4);
-      scene.add(light);
-
-      camera.position.z = 5;
-
-      function animate() {
-
-        renderer.render( scene, camera );
-        requestAnimationFrame( animate );
-      };
-
-      animate();
-    </script>
+    <script src="node_modules/three/examples/js/environments/RoomEnvironment.js"></script>
+    <script src="Project.js"></script>
   </body>
 </html>
