--- a/FinalProject/Project.html
+++ b/FinalProject/Project.html
@@ -11,6 +11,7 @@
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+    <script src="node_modules/three/examples/js/controls/FirstPersonControls.js"></script>
     <script src="Project.js"></script>
   </body>
 </html>
